# rhood

./: .gitignore  README.md  pyproject.toml  requirements.txt  tox.ini
src/rhood/: rhood.py  util.py
